--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "serv"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 actix="0.13.5"
-actix-web="*"
+actix-web="4.3.1"
 actix-multipart = "*"
+actix-identity = "0.7.0"
+actix-session = { version = "0.8.0", features = ["cookie-session"] }
 dotenvy = "*"
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
@@ -33,3 +35,7 @@ sha1 = "*"
 mime = "*"
 mime_guess = "*"
 sanitize-filename = "*"
+# Shuttle dependencies
+shuttle-runtime = "0.52.0"
+shuttle-actix-web = "0.52.0"
+shuttle-shared-db = { version = "0.52.0", features = ["postgres"] }
